# adi_imu_ros2

./: CMakeLists.txt  README.md  package.xml
config/: adis16470.rviz
include/adi_driver/: adis16470.h
launch/: adis16470.launch.py
src/: adis16470.cpp  adis16470_node.cpp
